apps/navidrome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  namespace: media
  labels:
    app.kubernetes.io/name: navidrome
spec:
  selector:
    app.kubernetes.io/name: navidrome
  ports:
    - {name: http, port: 4533, targetPort: public-http}
    - {name: metrics, port: 14535, targetPort: metrics-http}
---
apiVersion: v1
kind: Service
metadata:
  name: navidrome-api
  namespace: media
spec:
  selector:
    app.kubernetes.io/name: navidrome
  ports:
    - {name: http, port: 4533, targetPort: api-http}
